--- a/src/components/StepProgress/stepProgress.scss
+++ b/src/components/StepProgress/stepProgress.scss
@@ -1,3 +1,7 @@
+.stepItemDisable {
+  color: rgb(105, 101, 101);
+}
+
 .step {
   width: 35px;
   height: 35px;
@@ -7,9 +11,36 @@
   border-radius: 50%
 }
 
+.stepDisable {
+  width: 35px;
+  height: 35px;
+  border: 2px solid rgb(105, 101, 101);
+  text-align: center;
+  margin-right: 6px;
+  border-radius: 50%
+}
+
+.stepFinish {
+  width: 35px;
+  height: 35px;
+  border: 2px solid rgb(0, 0, 0);
+  color: rgb(255, 251, 251);
+  background-color: black;
+  text-align: center;
+  margin-right: 6px;
+  border-radius: 50%
+}
+
 .line {
   width: 150px;
   height: 0;
   border: 4px solid rgb(0, 0, 0);
+  border-radius: 5%
+}
+
+.lineDisable {
+  width: 150px;
+  height: 0;
+  border: 4px solid rgb(188, 182, 182);
   border-radius: 5%
 }
