add css module and react memo

--- a/src/components/Cart/cart.module.scss
+++ b/src/components/Cart/cart.module.scss
@@ -2,11 +2,11 @@
   width: 600px
 }
 
-.product-img {
+.product_img {
   width: 200px;
   height: 200px;
 }
 
-.amount-control {
+.amount_control {
   width: 200px
 }
